more css and UI changes.

--- a/main.html
+++ b/main.html
@@ -5,11 +5,12 @@
   <title>Binge</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/DIYBootstrap.css" />
   <link rel="stylesheet" href="css/header.css" />
   <link rel="stylesheet" href="css/mainCss.css" />
 </head>
 <body>
-  <div id="mainCont">
+  <div id="navbarCont">
     <!-- navbar -->
     <div id="navbar">
       <!-- Home -->
@@ -40,7 +41,9 @@
         <div class="nav-icon"><i class="fas fa-search"></i></div>
       </div>
     </div>
+  </div>
 
+  <div id="mainCont">
     <!-- main body -->
     <div id="mainBody">
       <div id="featureGallery">
@@ -75,10 +78,18 @@
 
       <div id="leftBodyCont">
         <!-- top anime ranking -->
-        <div class="section">
+        <div class="section w-100">
           <h1>Top Animes</h1>
-          <div class="section-body">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          <div class="section-body anime-block-cont">
+            <div class="section-anime-block">
+              <img src="images/shows/title_image/naruto.jpg" />
+            </div>
+            <div class="section-anime-block">
+              <img src="images/shows/title_image/your_name.jpg" />
+            </div>
+            <div class="section-anime-block last">
+              <img src="images/shows/title_image/attack_on_titan.jpg" />
+            </div>
           </div>
         </div>
 
@@ -93,7 +104,7 @@
 
       <div id="rightBodyCont">
         <!-- rate me -->
-        <div class="section w-50">
+        <div class="section w-xs-100 w-50">
           <h1>Rate Me</h1>
           <div class="section-body">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
@@ -101,7 +112,7 @@
         </div>
 
         <!-- review me -->
-        <div class="section w-50">
+        <div class="section w-xs-100 w-50">
           <h1>Review Me</h1>
           <div class="section-body">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
