--- a/shows.html
+++ b/shows.html
@@ -4,11 +4,12 @@
   <title>Binge - shows</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/DIYBootstrap.css" />
   <link rel="stylesheet" href="css/header.css" />
   <link rel="stylesheet" href="css/shows.css" />
 </head>
 <body>
-  <div id="mainCont">
+  <div id="navbarCont">
     <!-- navbar -->
     <div id="navbar">
       <!-- Home -->
@@ -39,7 +40,9 @@
         <div class="nav-icon"><i class="fas fa-search"></i></div>
       </div>
     </div>
+  </div>
 
+  <div id="mainCont">
     <!-- main body -->
     <div id="mainBody">
       <!-- filter container -->
