fixes 'Top Animes' section.

--- a/main.html
+++ b/main.html
@@ -87,6 +87,21 @@
             <div class="section-anime-block">
               <img src="images/shows/title_image/your_name.jpg" />
             </div>
+            <div class="section-anime-block">
+              <img src="images/shows/title_image/one_punch_man.jpg" />
+            </div>
+            <div class="section-anime-block">
+              <img src="images/shows/title_image/mob_psycho_100.jpg" />
+            </div>
+            <div class="section-anime-block">
+              <img src="images/shows/title_image/anohana.jpg" />
+            </div>
+            <div class="section-anime-block">
+              <img src="images/shows/title_image/one_piece.jpg" />
+            </div>
+            <div class="section-anime-block">
+              <img src="images/shows/title_image/seven_deadly_sins.jpg" />
+            </div>
             <div class="section-anime-block last">
               <img src="images/shows/title_image/attack_on_titan.jpg" />
             </div>
