edit the design of title image hover

--- a/main.html
+++ b/main.html
@@ -84,6 +84,7 @@
             <div class="section-anime-block">
               <img src="images/shows/title_image/naruto.jpg" />
               <div class="rating d-none">
+                <h3>Naruto</h3>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -94,6 +95,7 @@
             <div class="section-anime-block">
               <img src="images/shows/title_image/your_name.jpg" />
               <div class="rating d-none">
+                <h3>Your Name</h3>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -104,6 +106,7 @@
             <div class="section-anime-block">
               <img src="images/shows/title_image/one_punch_man.jpg" />
               <div class="rating d-none">
+                <h3>One Punch Man</h3>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -114,6 +117,7 @@
             <div class="section-anime-block">
               <img src="images/shows/title_image/mob_psycho_100.jpg" />
               <div class="rating d-none">
+                <h3>Mob Psycho 100</h3>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -124,6 +128,7 @@
             <div class="section-anime-block">
               <img src="images/shows/title_image/anohana.jpg" />
               <div class="rating d-none">
+                <h3>Anohana</h3>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -134,6 +139,7 @@
             <div class="section-anime-block">
               <img src="images/shows/title_image/one_piece.jpg" />
               <div class="rating d-none">
+                <h3>One Piece</h3>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -144,6 +150,7 @@
             <div class="section-anime-block">
               <img src="images/shows/title_image/seven_deadly_sins.jpg" />
               <div class="rating d-none">
+                <h3>Seven Deadly Sins</h3>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -154,6 +161,7 @@
             <div class="section-anime-block last">
               <img src="images/shows/title_image/attack_on_titan.jpg" />
               <div class="rating d-none">
+                <h3>Attack on Titan</h3>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
@@ -171,6 +179,7 @@
             <div class="section-anime-block">
               <img src="images/shows/title_image/avengers_infinity_war.jpg" />
               <div class="rating d-none">
+                <h3>Avengers - Infinity War</h3>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -181,6 +190,7 @@
             <div class="section-anime-block">
               <img src="images/shows/title_image/your_name.jpg" />
               <div class="rating d-none">
+                <h3>Your Name</h3>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -189,8 +199,9 @@
               </div>
             </div>
             <div class="section-anime-block">
-              <img src="images/shows/title_image/spide_man_into_the_spider_verse.jpg" />
+              <img src="images/shows/title_image/spider_man_into_the_spider_verse.jpg" />
               <div class="rating d-none">
+                <h3>Spider Man - Into the Spider-Verse</h3>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -201,6 +212,7 @@
             <div class="section-anime-block">
               <img src="images/shows/title_image/black_panther.jpg" />
               <div class="rating d-none">
+                <h3>Black Panther</h3>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -211,6 +223,7 @@
             <div class="section-anime-block">
               <img src="images/shows/title_image/anohana.jpg" />
               <div class="rating d-none">
+                <h3>Anohana</h3>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -221,6 +234,7 @@
             <div class="section-anime-block">
               <img src="images/shows/title_image/incredibles_2.jpg" />
               <div class="rating d-none">
+                <h3>Incredible 2</h3>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -231,6 +245,7 @@
             <div class="section-anime-block">
               <img src="images/shows/title_image/aquaman.jpg" />
               <div class="rating d-none">
+                <h3>Aquaman</h3>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -241,6 +256,7 @@
             <div class="section-anime-block last">
               <img src="images/shows/title_image/ant_man_and_the_wasp.png" />
               <div class="rating d-none">
+                <h3>Ant Man and the Wasp</h3>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
