added custom font

--- a/shows.html
+++ b/shows.html
@@ -58,7 +58,7 @@
         <div id="ategoriesFilter" class="filterType">
           <div class="filterIcon">
             <i class="fas fa-sort-alpha-down"></i>
-            <i class="fas fa-sort-alpha-up hide"></i>
+            <i class="fas fa-sort-alpha-up d-none"></i>
           </div>
         </div>
 
