implemented more tags. added readme. redesign the homepage banner.

--- a/main.html
+++ b/main.html
@@ -47,12 +47,13 @@
     <!-- main body -->
     <div id="mainBody">
       <div id="featureGallery">
-        <!-- left arrow -->
-        <div id="goLeft"><i class="fas fa-angle-left"></i></div>
-        <!-- right arrow -->
-        <div id="goRight"><i class="fas fa-angle-right"></i></div>
         <!-- gallery container -->
         <div id="galleryCont">
+          <div id="galleryDetail">
+            <span id="galleryTitle">Naruto</span>
+            <p id="galleryBody">Rated the best anime of all time!</p>
+            <button id="galleryButton">More Detail</button>
+          </div>
           <div class="feature-cont active">
             <a href="https://www.google.com/search?q=naruto" target="_blank">
               <img src="images/featureBanners/naruto_banner.jpg">
