--- a/shows.html
+++ b/shows.html
@@ -78,103 +78,106 @@
       </div>
 
       <!-- filter result -->
-      <div id="resultCont">
-        <ul>
-          <!-- naruto -->
-          <li>
-            <!-- title section -->
-            <div class="showTitle">
-              <!-- title name -->
-              <h2>Naruto</h2>
+      <table id="resultCont">
+        <!-- naturo -->
+        <tr>
+          <!-- title section -->
+          <td class="showTitle">
+            <!-- title name -->
+            <h2>Naruto</h2>
 
-              <!-- show image -->
+            <!-- show image -->
+            <div class=title-image>
               <img src="images/shows/title_image/naruto.jpg" />
-
-              <!-- rating -->
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-                <i class="far fa-star"></i>
-              </div>
             </div>
 
-            <!-- detail section -->
-            <div class="showDetail">
-              <div class="aboutShow">
-                The Village Hidden in the Leaves is home to the stealthiest ninja. But twelve years earlier, a fearsome Nine-tailed Fox terrorized the village before it was subdued and its spirit sealed within the body of a baby boy.
-              </div>
-              <div class="topReview">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-              </div>
+            <!-- rating -->
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <i class="far fa-star"></i>
             </div>
-          </li>
+          </td>
 
-          <!-- Your Name -->
-          <li>
-            <!-- title section -->
-            <div class="showTitle">
-              <!-- title name -->
-              <h2>Your Name</h2>
+          <!-- about show -->
+          <td class="aboutShow">
+            The Village Hidden in the Leaves is home to the stealthiest ninja. But twelve years earlier, a fearsome Nine-tailed Fox terrorized the village before it was subdued and its spirit sealed within the body of a baby boy.
+          </td>
 
-              <!-- show image -->
+          <td class="topReview">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          </td>
+        </tr>
+
+        <!-- Your Name -->
+        <tr>
+          <td class="showTitle">
+            <!-- title name -->
+            <h2>Your Name</h2>
+
+            <!-- show image -->
+            <div class=title-image>
               <img src="images/shows/title_image/your_name.jpg" />
-
-              <!-- rating -->
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-              </div>
             </div>
 
-            <!-- detail section -->
-            <div class="showDetail">
-              <div class="aboutShow">
-                A teenage boy and girl embark on a quest to meet each other for the first time after they magically swap bodies.              </div>
-                <div class="topReview">
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                </div>
-              </div>
-            </li>
+            <!-- rating -->
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+          </td>
 
-            <!-- Attack On Titan -->
-            <li>
-              <!-- title section -->
-              <div class="showTitle">
-                <!-- title name -->
-                <h2>Attack on Tian</h2>
+          <!-- about show -->
+          <td class="aboutShow">
+            A teenage boy and girl embark on a quest to meet each other for the first time after they magically swap bodies.              </div>
+          </td>
 
-                <!-- show image -->
-                <img src="images/shows/title_image/attack_on_titan.jpg" />
+          <!-- top review -->
+          <td class="topReview">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          </td>
+        </tr>
 
-                <!-- rating -->
-                <div class="rating">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
-                  <i class="far fa-star"></i>
-                </div>
-              </div>
+        <!-- Attack on Tian -->
+        <tr>
+          <td class="showTitle">
+            <!-- title name -->
+            <h2>Attack on Tian</h2>
 
-              <!-- detail section -->
-              <div class="showDetail">
-                <div class="aboutShow">
-                  Known in Japan as Shingeki no Kyojin, many years ago, the last remnants of humanity were forced to retreat behind the towering walls of a fortified city to escape the massive, man-eating Titans that roamed the land outside their fortress. Only the heroic members of the Scouting Legion dared to stray beyond the safety of the walls – but even those brave warriors seldom returned alive. Those within the city clung to the illusion of a peaceful existence until the day that dream was shattered, and their slim chance at survival was reduced to one horrifying choice: kill – or be devoured!                </div>
-                  <div class="topReview">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
+            <!-- show image -->
+            <div class=title-image>
+              <img src="images/shows/title_image/attack_on_titan.jpg" />
+            </div>
 
-        <div id="footer">
-        </div>
-      </div>
-    </body>
+            <!-- rating -->
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <i class="far fa-star"></i>
+            </div>
+          </td>
+
+          <!-- about show -->
+          <td class="aboutShow">
+            Known in Japan as Shingeki no Kyojin, many years ago, the last remnants of humanity were forced to retreat behind the towering walls of a fortified city to escape the massive, man-eating Titans that roamed the land outside their fortress. Only the heroic members of the Scouting Legion dared to stray beyond the safety of the walls – but even those brave warriors seldom returned alive. Those within the city clung to the illusion of a peaceful existence until the day that dream was shattered, and their slim chance at survival was reduced to one horrifying choice: kill – or be devoured!                </div>
+          </td>
+
+          <!-- top review -->
+          <td class="topReview">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+
+  <div id="footer">
+  </div>
+</body>
