implemented animated feature slide show

--- a/main.html
+++ b/main.html
@@ -13,6 +13,7 @@
   <div id="navbarCont">
     <!-- navbar -->
     <div id="navbar">
+      <div id="pageLoader"></div>
       <!-- Home -->
       <div class="nav-item">
         <a class="nav-icon" href="main.html"><i class="fab fa-fort-awesome"></i></a>
@@ -52,7 +53,7 @@
           <div id="galleryDetail">
             <span id="galleryTitle">Naruto</span>
             <p id="galleryBody">Rated the best anime of all time!</p>
-            <button id="galleryButton">More Detail</button>
+            <i id="galleryDetailButton" class="fas fa-external-link-alt"></i>
           </div>
           <div class="feature-cont active">
             <a href="https://www.google.com/search?q=naruto" target="_blank">
@@ -298,7 +299,7 @@
 
     <!-- footer -->
     <div id="footer">
-
+      <script type="text/javascript" src="js/mainJs.js"></script>
     </div>
   </div>
 </body>
