--- a/shows.html
+++ b/shows.html
@@ -12,6 +12,7 @@
   <div id="navbarCont">
     <!-- navbar -->
     <div id="navbar">
+      <div id="pageLoader"></div>
       <!-- Home -->
       <div class="nav-item">
         <a class="nav-icon" href="main.html"><i class="fab fa-fort-awesome"></i></a>
@@ -179,5 +180,6 @@
   </div>
 
   <div id="footer">
+    <script type="text/javascript" src="js/mainJs.js"></script>
   </div>
 </body>
