--- a/shows.html
+++ b/shows.html
@@ -36,6 +36,11 @@
         <div class="nav-icon"><i class="fas fa-poll"></i></div>
       </div>
 
+      <!-- Hangman Game -->
+      <div class="nav-item">
+        <a class="nav-icon" href="hangman.html"><i class="fas fa-male"></i></a>
+      </div>
+
       <!-- Search -->
       <div class="nav-item">
         <div class="nav-icon"><i class="fas fa-search"></i></div>
