--- a/main.html
+++ b/main.html
@@ -83,220 +83,192 @@
         </div>
       </div>
 
-      <div id="leftBodyCont">
-        <!-- top anime ranking -->
-        <div class="section w-100">
-          <h1>Top Animes</h1>
-          <div class="section-body anime-block-cont">
-            <div class="section-anime-block">
-              <img src="images/shows/title_image/naruto.jpg" />
-              <div class="rating d-none">
-                <h3>Naruto</h3>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-              </div>
-            </div>
-            <div class="section-anime-block">
-              <img src="images/shows/title_image/your_name.jpg" />
-              <div class="rating d-none">
-                <h3>Your Name</h3>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-              </div>
-            </div>
-            <div class="section-anime-block">
-              <img src="images/shows/title_image/one_punch_man.jpg" />
-              <div class="rating d-none">
-                <h3>One Punch Man</h3>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-                <i class="far fa-star"></i>
-              </div>
-            </div>
-            <div class="section-anime-block">
-              <img src="images/shows/title_image/mob_psycho_100.jpg" />
-              <div class="rating d-none">
-                <h3>Mob Psycho 100</h3>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-                <i class="far fa-star"></i>
-              </div>
-            </div>
-            <div class="section-anime-block">
-              <img src="images/shows/title_image/anohana.jpg" />
-              <div class="rating d-none">
-                <h3>Anohana</h3>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-                <i class="far fa-star"></i>
-              </div>
-            </div>
-            <div class="section-anime-block">
-              <img src="images/shows/title_image/one_piece.jpg" />
-              <div class="rating d-none">
-                <h3>One Piece</h3>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-              </div>
-            </div>
-            <div class="section-anime-block">
-              <img src="images/shows/title_image/seven_deadly_sins.jpg" />
-              <div class="rating d-none">
-                <h3>Seven Deadly Sins</h3>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-              </div>
-            </div>
-            <div class="section-anime-block last">
-              <img src="images/shows/title_image/attack_on_titan.jpg" />
-              <div class="rating d-none">
-                <h3>Attack on Titan</h3>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-              </div>
+      <!-- top anime ranking -->
+      <div class="section w-100">
+        <h1>Top Animes</h1>
+        <div class="section-body anime-block-cont">
+          <div class="section-anime-block">
+            <img src="images/shows/title_image/naruto.jpg" />
+            <div class="rating d-none">
+              <h3>Naruto</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
             </div>
           </div>
-        </div>
-
-        <!-- top movie ranking -->
-        <div class="section w-100">
-          <h1>Top Movies</h1>
-          <div class="section-body anime-block-cont">
-            <div class="section-anime-block">
-              <img src="images/shows/title_image/avengers_infinity_war.jpg" />
-              <div class="rating d-none">
-                <h3>Avengers - Infinity War</h3>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-              </div>
+          <div class="section-anime-block">
+            <img src="images/shows/title_image/your_name.jpg" />
+            <div class="rating d-none">
+              <h3>Your Name</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
             </div>
-            <div class="section-anime-block">
-              <img src="images/shows/title_image/your_name.jpg" />
-              <div class="rating d-none">
-                <h3>Your Name</h3>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-              </div>
+          </div>
+          <div class="section-anime-block">
+            <img src="images/shows/title_image/one_punch_man.jpg" />
+            <div class="rating d-none">
+              <h3>One Punch Man</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <i class="far fa-star"></i>
             </div>
-            <div class="section-anime-block">
-              <img src="images/shows/title_image/spider_man_into_the_spider_verse.jpg" />
-              <div class="rating d-none">
-                <h3>Spider Man - Into the Spider-Verse</h3>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-              </div>
+          </div>
+          <div class="section-anime-block">
+            <img src="images/shows/title_image/mob_psycho_100.jpg" />
+            <div class="rating d-none">
+              <h3>Mob Psycho 100</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <i class="far fa-star"></i>
             </div>
-            <div class="section-anime-block">
-              <img src="images/shows/title_image/black_panther.jpg" />
-              <div class="rating d-none">
-                <h3>Black Panther</h3>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-              </div>
+          </div>
+          <div class="section-anime-block">
+            <img src="images/shows/title_image/anohana.jpg" />
+            <div class="rating d-none">
+              <h3>Anohana</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <i class="far fa-star"></i>
             </div>
-            <div class="section-anime-block">
-              <img src="images/shows/title_image/anohana.jpg" />
-              <div class="rating d-none">
-                <h3>Anohana</h3>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-              </div>
+          </div>
+          <div class="section-anime-block">
+            <img src="images/shows/title_image/one_piece.jpg" />
+            <div class="rating d-none">
+              <h3>One Piece</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
             </div>
-            <div class="section-anime-block">
-              <img src="images/shows/title_image/incredibles_2.jpg" />
-              <div class="rating d-none">
-                <h3>Incredible 2</h3>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-              </div>
+          </div>
+          <div class="section-anime-block">
+            <img src="images/shows/title_image/seven_deadly_sins.jpg" />
+            <div class="rating d-none">
+              <h3>Seven Deadly Sins</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
             </div>
-            <div class="section-anime-block">
-              <img src="images/shows/title_image/aquaman.jpg" />
-              <div class="rating d-none">
-                <h3>Aquaman</h3>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-              </div>
-            </div>
-            <div class="section-anime-block last">
-              <img src="images/shows/title_image/ant_man_and_the_wasp.png" />
-              <div class="rating d-none">
-                <h3>Ant Man and the Wasp</h3>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-              </div>
+          </div>
+          <div class="section-anime-block last">
+            <img src="images/shows/title_image/attack_on_titan.jpg" />
+            <div class="rating d-none">
+              <h3>Attack on Titan</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
             </div>
           </div>
         </div>
       </div>
 
-      <div id="rightBodyCont">
-        <!-- rate me -->
-        <div class="section w-xs-100 w-50">
-          <h1>Rate Me</h1>
-          <div class="section-body">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+      <!-- top movie ranking -->
+      <div class="section w-100">
+        <h1>Top Movies</h1>
+        <div class="section-body anime-block-cont">
+          <div class="section-anime-block">
+            <img src="images/shows/title_image/avengers_infinity_war.jpg" />
+            <div class="rating d-none">
+              <h3>Avengers - Infinity War</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
           </div>
-        </div>
-
-        <!-- review me -->
-        <div class="section w-xs-100 w-50">
-          <h1>Review Me</h1>
-          <div class="section-body">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          <div class="section-anime-block">
+            <img src="images/shows/title_image/your_name.jpg" />
+            <div class="rating d-none">
+              <h3>Your Name</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
           </div>
-        </div>
-
-        <!-- New Arrival -->
-        <div class="section">
-          <h1>New Arrival</h1>
-          <div class="section-body">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          <div class="section-anime-block">
+            <img src="images/shows/title_image/spider_man_into_the_spider_verse.jpg" />
+            <div class="rating d-none">
+              <h3>Spider Man - Into the Spider-Verse</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+          </div>
+          <div class="section-anime-block">
+            <img src="images/shows/title_image/black_panther.jpg" />
+            <div class="rating d-none">
+              <h3>Black Panther</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+          </div>
+          <div class="section-anime-block">
+            <img src="images/shows/title_image/anohana.jpg" />
+            <div class="rating d-none">
+              <h3>Anohana</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+          </div>
+          <div class="section-anime-block">
+            <img src="images/shows/title_image/incredibles_2.jpg" />
+            <div class="rating d-none">
+              <h3>Incredible 2</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+          </div>
+          <div class="section-anime-block">
+            <img src="images/shows/title_image/aquaman.jpg" />
+            <div class="rating d-none">
+              <h3>Aquaman</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+          </div>
+          <div class="section-anime-block last">
+            <img src="images/shows/title_image/ant_man_and_the_wasp.png" />
+            <div class="rating d-none">
+              <h3>Ant Man and the Wasp</h3>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
           </div>
         </div>
       </div>
@@ -304,6 +276,8 @@
 
     <!-- footer -->
     <div id="footer">
+      <script type="text/javascript" src="js/footerJs.js"></script>
+      <script type="text/javascript" src="js/DIYBootstrap.js"></script>
       <script type="text/javascript" src="js/mainJs.js"></script>
     </div>
   </div>
