--- a/shows.html
+++ b/shows.html
@@ -184,7 +184,10 @@
     </div>
   </div>
 
+  <!-- footer -->
   <div id="footer">
+    <script type="text/javascript" src="js/footerJs.js"></script>
+    <script type="text/javascript" src="js/DIYBootstrap.js"></script>
     <script type="text/javascript" src="js/mainJs.js"></script>
   </div>
 </body>
