rename files to be more consistent. Fixes error with diy bootstrap modal class name not found.

--- a/main.html
+++ b/main.html
@@ -277,7 +277,7 @@
     <!-- footer -->
     <div id="footer">
       <script type="text/javascript" src="js/footerJs.js"></script>
-      <script type="text/javascript" src="js/DIYBootstrap.js"></script>
+      <script type="text/javascript" src="js/DIYBootstrapJs.js"></script>
       <script type="text/javascript" src="js/mainJs.js"></script>
     </div>
   </div>
