--- a/hangman.html
+++ b/hangman.html
@@ -75,9 +75,9 @@
 
   <!-- footer -->
   <div id="footer">
-    <script type="text/javascript" src="js/footer.js"></script>
-    <script type="text/javascript" src="js/DIYBootstrap.js"></script>
-    <script type="text/javascript" src="js/hangman.js"></script>
+    <script type="text/javascript" src="js/footerJs.js"></script>
+    <script type="text/javascript" src="js/DIYBootstrapJs.js"></script>
+    <script type="text/javascript" src="js/hangmanJs.js"></script>
   </div>
 </body>
 </html>
