--- a/shows.html
+++ b/shows.html
@@ -187,7 +187,7 @@
   <!-- footer -->
   <div id="footer">
     <script type="text/javascript" src="js/footerJs.js"></script>
-    <script type="text/javascript" src="js/DIYBootstrap.js"></script>
+    <script type="text/javascript" src="js/DIYBootstrapJs.js"></script>
     <script type="text/javascript" src="js/mainJs.js"></script>
   </div>
 </body>
