--- a/hangman.html
+++ b/hangman.html
@@ -59,6 +59,8 @@
       <div id="gameBody">
         <div id="guessText"></div>
       </div>
+      <div id="mouseInputButtons">
+      </div>
       <button id="guessWord" class="d-none btn" type="button" name="button">Guess Word</button>
       <button id="newGame" class="btn" type="button" name="button" onclick="newGame()">New Game</button>
     </div>
@@ -66,10 +68,11 @@
 
   <div class="modal">
     <div class="modalCont">
-      <div class="modalBody"></div>
-      <div class="modalClose">
+      <div class="modal-body"></div>
+      <div class="modal-close">
         <i class="fas fa-times"></i>
       </div>
+      <button id="modalBtn" class="btn"></button>
     </div>
   </div>
 
