rearranged modal in the hangman page

--- a/hangman.html
+++ b/hangman.html
@@ -59,15 +59,16 @@
       <button id="guessWord" class="d-none btn" type="button" name="button">Guess Word</button>
       <button id="newGame" class="btn" type="button" name="button" onclick="newGame()">New Game</button>
     </div>
-  </div>
 
-  <div class="modal">
-    <div class="modalCont">
-      <div class="modal-body"></div>
-      <div class="modal-close">
-        <i class="fas fa-times"></i>
+    <!-- modal -->
+    <div class="modal">
+      <div class="modalCont">
+        <div class="modal-body"></div>
+        <div class="modal-close">
+          <i class="fas fa-times"></i>
+        </div>
+        <button id="modalBtn" class="btn"></button>
       </div>
-      <button id="modalBtn" class="btn"></button>
     </div>
   </div>
 
